Fix bussimple building with math lib; Fix requirement for verbosity in iboard.c - bussimple uses the C math lib to access the power function.  DIfferent compilers require different build options.  On OSX, do not need to expliciy link the math lib, nor does Intel compiler on linux.  Other tests varied, but explicity linking math does not cause an error on tested compilers - testing a simple log library left the code with a requirement that a parameter be added to the invocation of the iboard program.  Could be anything to function, but not including it caused access to an undefined memory region, causing a segmentation fault.  Added code to check for a parameter before setting logging level.

--- a/week-04/pauls/Makefile
+++ b/week-04/pauls/Makefile
@@ -11,6 +11,9 @@ $(OBJS): $(SRC)
 
 iboard: log.o iboard.o
 
+bussimple: bussimple.o
+	$(CC) $(CFLAGS) -lm -o $@ $^
+
 .PHONY: clean
 clean:
 	rm -f $(OBJS) $(PROGS)
