--- a/week-04/pauls/Makefile
+++ b/week-04/pauls/Makefile
@@ -1,6 +1,6 @@
 CC=clang
 # CFLAGS=-Wall -Wextra -Werror -Wpedantic --debug
-CFLAGS=-Wall -Wextra --debug
+CFLAGS=-Wall -Wextra
 SRC=$(wildcard *.c)
 OBJS=$(SRC:%.c=%.o)
 PROGS=iboard brokenswords busrecursion bussimple cetvrta
