--- a/week-06/jackharrhy/Makefile
+++ b/week-06/jackharrhy/Makefile
@@ -1,7 +1,10 @@
 all: clean sudokuchecker
 
 sudokuchecker:
-	gcc -g -lpthread -Wall -Wextra -Werror -Wpedantic ./sudokuchecker.c -o ./sudokuchecker.o
+	gcc -g -Wall -Wextra -Werror -Wpedantic ./sudokuchecker.c -o ./sudokuchecker.o
+
+sudokuchecker-threads:
+	gcc -g -lpthread -Wall -Wextra -Werror -Wpedantic ./sudokuchecker-threads.c -o ./sudokuchecker-threads.o
 
 sample1:
 	cat ../test-samples/sudokuchecker/sample1.in | ./sudokuchecker.o
