use mallow for args, cleanup makefile

--- a/week-06/jackharrhy/Makefile
+++ b/week-06/jackharrhy/Makefile
@@ -1,4 +1,4 @@
-all: clean sudokuchecker
+all: clean sudokuchecker sudokuchecker-threads
 
 sudokuchecker:
 	gcc -g -Wall -Wextra -Werror -Wpedantic ./sudokuchecker.c -o ./sudokuchecker.o
@@ -13,5 +13,13 @@ sample2:
 sample3:
 	cat ../test-samples/sudokuchecker/sample3.in | ./sudokuchecker.o
 
+sample1-threads:
+	cat ../test-samples/sudokuchecker/sample1.in | ./sudokuchecker-threads.o
+sample2-threads:
+	cat ../test-samples/sudokuchecker/sample2.in | ./sudokuchecker-threads.o
+sample3-threads:
+	cat ../test-samples/sudokuchecker/sample3.in | ./sudokuchecker-threads.o
+
 clean:
-	-rm ./sudokuchecker
+	-rm ./sudokuchecker.o
+	-rm ./sudokuchecker-threads.o
